--- a/WebContent/WEB-INF/properties/error_message.properties
+++ b/WebContent/WEB-INF/properties/error_message.properties
@@ -19,3 +19,6 @@ Pattern.tempLoginUserBean.user_pw = \ube44\ubc00\ubc88\ud638\ub294 \uc601\ubb38\
 
 NotBlank.writeContentBean.content_subject= \uc81c\ubaa9\uc744 \uc785\ub825\ud574 \uc8fc\uc138\uc694
 NotBlank.writeContentBean.content_text= \ub0b4\uc6a9\uc744 \uc785\ub825\ud574 \uc8fc\uc138\uc694
+
+NotBlank.modifyContentBean.content_subject= \uc81c\ubaa9\uc744 \uc785\ub825\ud574 \uc8fc\uc138\uc694
+NotBlank.modifyContentBean.content_text= \ub0b4\uc6a9\uc744 \uc785\ub825\ud574 \uc8fc\uc138\uc694
