--- a/WebContent/WEB-INF/properties/option.properties
+++ b/WebContent/WEB-INF/properties/option.properties
@@ -1,1 +1,4 @@
 path.upload = C:/workspace/.metadata/.plugins/org.eclipse.wst.server.core/tmp0/wtpwebapps/MVCBoard/resources/upload
+
+page.listcnt = 10
+page.paginationcnt = 10
